chore: add the create user swagger doc comments
